--- a/index-archive.html
+++ b/index-archive.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link rel="stylesheet" type="text/css" href="css/index-archive.css" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -80,16 +80,6 @@
 <body>
     <progress id="content-progress" value="0"></progress>
 
-    <nav>
-        <a href="#home" onclick="driveTo(0)" class="nava activenav"><p>Home</p></a>
-        <a href="#background" onclick="driveTo(1)" class="nava"><p>Background</p></a>
-        <a href="#race" onclick="driveTo(2)" class="nava"><p>Introduction</p></a>
-        <a href="#information" onclick="driveTo(3)" class="nava"><p>Information</p></a>
-        <a href="#physical" onclick="driveTo(4)" class="nava"><p>Physical</p></a>
-        <a href="#conclusion" onclick="driveTo(5)" class="nava"><p>Conclusion</p></a>
-        <a href="#footer" onclick="driveTo(6)" class="nava" style="display: none;"><p></p></a>
-    </nav>
-
     <!-- back to top icon -->
     <a id="backtotop">
         <svg id="layer2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16.85 35.95">
@@ -124,8 +114,8 @@
                     Water Animation</a></p>
         </div>
 
-        <a href="#background" onclick="driveTo(1)">
-            <div class="scrolldown section1">
+        <a href="#background">
+            <div class="scrolldown">
                 <svg id="layer1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 27.14 11.04">
                     <defs>
                         <style>
@@ -143,9 +133,9 @@
         </a>
     </section>
 
+    <!-- Start p1 of Background -->
     <section class="container" id="background">
         <h1 class="note" style="font-size:6rem;">Background</h1>
-        <!-- Start p1 of Background -->
         <div class="row">
             <div class="column1" id="bgimg1">
                 <div class="bgcontent frame">
@@ -155,11 +145,12 @@
                     <p style="font-size:8pt; padding-left:100px">Source: <a
                             href="https://www.nbcnews.com/news/obituaries/coronavirus-deaths-60-stories-victims-around-country-n1194396">NBC
                             News</a></p>
+                    <br><br><br><br>
                 </div>
             </div>
             <div class="column2">
                 <div class="bgcontent frame" id="triggerbg1">
-                    <h3 style="text-align: center; padding-top: 200px;">Victims of COVID</h3>
+                    <h1 style="text-align: center; padding-top: 200px;">Victims of COVID</h1>
                     <p style="font-size: 1.2rem;padding: 20px;">There have been many cases of COVID-19 in US, but have
                         all racial groups
                         equally suffered from this new virus? Researchers have already studied the racial inequity in
@@ -168,8 +159,10 @@
                 </div>
             </div>
         </div>
-        <!-- End p1 of Background -->
-        <!-- Start p2 of Background -->
+    </section>
+    <!-- End p1 of Background -->
+    <!-- Start p2 of Background -->
+    <section class="container" id="background">
         <div class="row">
             <div class="column1" id="bgimg2">
                 <div class="dummyframe">
@@ -182,8 +175,8 @@
             </div>
             <div class="column2">
                 <div class="dummyframe" id="triggerbg2">
-                    <h3 style="text-align: center; padding-top: 200px;">High Infection Rate in White-dominant Cities
-                    </h3>
+                    <h1 style="text-align: center; padding-top: 200px;">High Infection Rate in White-dominant Cities
+                    </h1>
                     <p style="font-size: 1.2rem;padding: 20px;">
                         The Atlantic launched a voluntary project, The COVID Tracking Project, and has collected data on
                         COVID-19 testing and patient outcomes from 50 states, and analyzed racial inequity. One of the
@@ -192,8 +185,10 @@
                 </div>
             </div>
         </div>
-        <!-- End p2 of Background -->
-        <!-- Start p3 of Background -->
+    </section>
+    <!-- End p2 of Background -->
+    <!-- Start p3 of Background -->
+    <section class="container" id="background">
         <div class="row">
             <div class="column1" id="bgimg3">
                 <div class="dummyframe">
@@ -206,17 +201,17 @@
             </div>
             <div class="column2">
                 <div class="dummyframe" id="triggerbg3">
-                    <h3 style="text-align: center; padding-top: 200px;">High Death Rate in Black-dominant Cities
-                    </h3>
+                    <h1 style="text-align: center; padding-top: 200px;">High Death Rate in Black-dominant Cities</h1>
                     <p style="font-size: 1.2rem;padding: 20px;">
-                        On the other hands, it also found that the high death rate is seen more in the
-                        Black-dominant
+                        On the other hands, it also found that the high death rate is seen more in the Black-dominant
                         cities.</p>
                 </div>
             </div>
         </div>
-        <!-- End p3 of Background -->
-        <!-- Start p4 of Background -->
+    </section>
+    <!-- End p3 of Background -->
+    <!-- Start p4 of Background -->
+    <section class="container" id="background">
         <div class="row">
             <div class="column1" id="bgimg4">
                 <div class="dummyframe">
@@ -230,7 +225,7 @@
             </div>
             <div class="column2">
                 <div class="dummyframe" id="triggerbg4">
-                    <h3 style="text-align: center; padding-top: 200px;">Death from COVID and Social Vulnerability</h3>
+                    <h1 style="text-align: center; padding-top: 200px;">Death from COVID and Social Vulnerability</h1>
                     <p style="font-size: 1.2rem;padding: 20px;">
                         This relatively low infection and high death rate in the Black communities lead to our
                         assumption that social vulnerability is one of the major reasons why they have tended to be the
@@ -238,8 +233,10 @@
                 </div>
             </div>
         </div>
-        <!-- End p4 of Background -->
-        <!-- Start p5 of Background -->
+    </section>
+    <!-- End p4 of Background -->
+    <!-- Start p5 of Background -->
+    <section class="container" id="background">
         <div class="row">
             <div class="column1" id="bgimg5">
                 <div class="dummyframe">
@@ -254,7 +251,7 @@
             </div>
             <div class="column2">
                 <div class="dummyframe" id="triggerbg5">
-                    <h3 style="text-align: center; padding-top: 200px;">SVI+</h3>
+                    <h1 style="text-align: center; padding-top: 260px;">SVI+</h1>
                     <p style="font-size: 1.2rem;padding: 20px;">
                         Centers for Disease Control and Prevention (CDC) provides Social vulnerability index (SVI) in
                         order to help local officials to identify difficulties of communities. SVI is composed of widely
@@ -273,27 +270,8 @@
                 </div>
             </div>
         </div>
-        <!-- End p5 of Background -->
-        <div class="backgroundoffset"></div>
-        <a href="#race" onclick="driveTo(2)">
-            <div class="scrolldown">
-                <svg id="layer1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 27.14 11.04">
-                    <defs>
-                        <style>
-                            .cls-1 {
-                                fill: transparent;
-                                stroke-miterlimit: 10;
-                                stroke-width: 2px;
-                            }
-                        </style>
-                    </defs>
-                    <title>scrolldown</title>
-                    <polyline class="cls-1" points="0.57 0.82 13.57 9.82 26.57 0.82" />
-                </svg>
-            </div>
-        </a>
     </section>
-
+    <!-- End p5 of Background -->
     <!-- Start Case Study -->
     <section class="container" id="race">
         <h1 class="note" style="font-size:6rem;">Case Study</h1>
@@ -311,7 +289,7 @@
             </div>
             <div class="column2">
                 <div class="frame cscomment">
-                    <h3 style="text-align: center; padding-top: 200px;">New York City in ZIP-scale</h3>
+                    <h1 style="text-align: center; padding-top: 200px;">New York City in ZIP-scale</h1>
                     <p style="font-size: 1.2rem;padding: 20px;">We focus on New York City as a case study, because it
                         has wide variety of data, racial diversity and a number of medical facilities. Depending on the
                         format of the collected data, we will focus on ZIP scale as seen in the left-hand racial dot map
@@ -320,23 +298,6 @@
                 </div>
             </div>
         </div>
-        <a href="#information" onclick="driveTo(3)">
-            <div class="scrolldown">
-                <svg id="layer1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 27.14 11.04">
-                    <defs>
-                        <style>
-                            .cls-1 {
-                                fill: transparent;
-                                stroke-miterlimit: 10;
-                                stroke-width: 2px;
-                            }
-                        </style>
-                    </defs>
-                    <title>scrolldown</title>
-                    <polyline class="cls-1" points="0.57 0.82 13.57 9.82 26.57 0.82" />
-                </svg>
-            </div>
-        </a>
     </section>
     <!-- End Case Study -->
 
@@ -370,23 +331,6 @@
                 <div class="chart frame" id="infochart"></div>
             </div>
         </div>
-        <a href="#physical" onclick="driveTo(4)">
-            <div class="scrolldown">
-                <svg id="layer1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 27.14 11.04">
-                    <defs>
-                        <style>
-                            .cls-1 {
-                                fill: transparent;
-                                stroke-miterlimit: 10;
-                                stroke-width: 2px;
-                            }
-                        </style>
-                    </defs>
-                    <title>scrolldown</title>
-                    <polyline class="cls-1" points="0.57 0.82 13.57 9.82 26.57 0.82" />
-                </svg>
-            </div>
-        </a>
     </section>
 
     <section class="container" id="physical">
@@ -423,33 +367,15 @@
                         <li><b>Interaction:</b> Tooltips on hovering on the map dots, charts redrawn on clicking on the
                             map districts.</li>
                     </ul>
-                    <p style="font-size: 0.8rem;">The public hospitals from NYC Health + Hospitals are classified into 4
-                        kinds, while the facilities from Point of Interest is not classified.</p>
+                    <p style="font-size: 0.8rem;">The public hospitals from NYC Health + Hospitals are classified into 4 kinds, while the facilities from Point of Interest is not classified.</p>
                 </div>
                 <div class="chart frame" id="physchart"></div>
             </div>
         </div>
-        <a href="#conclusion" onclick="driveTo(5)">
-            <div class="scrolldown">
-                <svg id="layer1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 27.14 11.04">
-                    <defs>
-                        <style>
-                            .cls-1 {
-                                fill: transparent;
-                                stroke-miterlimit: 10;
-                                stroke-width: 2px;
-                            }
-                        </style>
-                    </defs>
-                    <title>scrolldown</title>
-                    <polyline class="cls-1" points="0.57 0.82 13.57 9.82 26.57 0.82" />
-                </svg>
-            </div>
-        </a>
     </section>
 
     <section class="container" id="conclusion">
-        <h1 class="note" style="font-size:6rem;">Conclusion</h1>
+        <h1 class="note" style="font-size:6rem;">Conclusion & Exploration</h1>
         <div class="row">
             <div class="column1 frame" id="concmap">
                 <div class="buttons">
@@ -485,23 +411,6 @@
                 <div class="chart frame" id="concchart"></div>
             </div>
         </div>
-        <a href="#footer" onclick="driveTo(6)">
-            <div class="scrolldown">
-                <svg id="layer1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 27.14 11.04">
-                    <defs>
-                        <style>
-                            .cls-1 {
-                                fill: transparent;
-                                stroke-miterlimit: 10;
-                                stroke-width: 2px;
-                            }
-                        </style>
-                    </defs>
-                    <title>scrolldown</title>
-                    <polyline class="cls-1" points="0.57 0.82 13.57 9.82 26.57 0.82" />
-                </svg>
-            </div>
-        </a>
     </section>
 
     <section id="footer">
@@ -560,12 +469,11 @@
                 <br>
                 <a
                     href="https://raw.githubusercontent.com/nychealth/coronavirus-data/master/totals/data-by-modzcta.csv">ACS
-                    NYC Health - Coronavirus-data - data-by-modzcta.csv</a>. Updated on Dec 2, 2020.
-            </p>
+                    NYC Health - Coronavirus-data - data-by-modzcta.csv</a>. Updated on Dec 2, 2020.</p>
         </div>
     </section>
 
-    <!-- scroll smoothly section-->
+    <!-- scroll smoothly -->
     <script class="scrollsection">
         $(document).ready(function () {
             $("a").on('click', function (event) {
@@ -614,7 +522,6 @@
                 if (event.deltaY > 0) {
                     if (currentIndex + 1 >= $sections.length) return;
                     if (!bottomIsReached($currentSection)) return;
-                    navs[currentIndex].classList.remove('activenav');
                     currentIndex++;
                     event.preventDefault();
                     isAnimating = true;
@@ -622,13 +529,11 @@
                 } else {
                     if (currentIndex - 1 < 0) return;
                     if (!topIsReached($currentSection)) return;
-                    navs[currentIndex].classList.remove('activenav');
                     currentIndex--;
                     event.preventDefault();
                     isAnimating = true;
                     $("html, body").animate({ scrollTop: $($sections[currentIndex]).offset().top }, 1000, stopAnimation);
                 }
-                navs[currentIndex].classList.add('activenav');
             },
             { passive: false }
         );
@@ -639,10 +544,8 @@
         $(window).scroll(function () {
             if ($(window).scrollTop() > 300) {
                 btn.addClass('show');
-                $('nav').addClass('show');
             } else {
                 btn.removeClass('show');
-                $('nav').removeClass('show');
             }
         });
 
@@ -651,14 +554,6 @@
             currentIndex = 0;
             $('html, body').animate({ scrollTop: 0 }, '300');
         });
-
-        // scrolldown arrow and navbar
-        var navs = $('.nava');
-        function driveTo(num) {
-            navs[num].classList.add('activenav');
-            navs[currentIndex].classList.remove('activenav');
-            currentIndex = num;
-        }
     </script>
     <!-- end scroll smoothly -->
 
